--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,55 @@
+[project]
+name = "ibm_db"
+version = "3.2.4"
+description = "Python DBI driver for DB2 (LUW, zOS, i5)"
+authors = [
+    { name = "IBM Application Development Team", email = "earamma.kanasavi@ibm.com" },
+]
+license = { text = "Apache License 2.0" }
+readme = "README.md"
+requires-python = ">=3.7"
+platforms = [
+    'Linux32/64',
+    'Win32/64',
+    'MacOS64',
+    'MacARM64',
+    'aix32/64',
+    'ppc32/64',
+    'sunamd32/64',
+    'sun32/64',
+    'ppc64le',
+    'z/OS',
+]
+keywords = ["database", "DB-API", "interface", "IBM Data Servers", "Db2"]
+classifiers = [
+    "Development Status :: 5 - Production/Stable",
+    "Intended Audience :: Developers",
+    "License :: OSI Approved :: Apache Software License",
+    "Operating System :: Microsoft :: Windows :: Windows 10",
+    "Operating System :: Microsoft :: Windows :: Windows 11",
+    "Operating System :: Unix",
+    "Operating System :: POSIX :: AIX",
+    "Operating System :: POSIX :: Linux",
+    "Operating System :: MacOS",
+    "Operating System :: MacOS :: MacOS X",
+    "Programming Language :: Python",
+    "Programming Language :: Python :: 3.7",
+    "Programming Language :: Python :: 3.8",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
+    "Topic :: Database :: Front-Ends",
+]
+
+[project.urls]
+Repository = "https://github.com/ibmdb/python-ibmdb"
+
 [build-system]
-requires = ["setuptools"]
+requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
+
 [tool.cibuildwheel.macos]  
 repair-wheel-command = "delocate-wheel --ignore-missing-dependencies --require-archs {delocate_archs} -w {dest_dir} -v {wheel}"
 skip = "cp36-macosx_x86_64"
