--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -19,6 +19,10 @@ jobs:
         options: >-
           --name db2
           --privileged
+          --health-cmd "/opt/ibm/db2/V12.1/bin/db2gcf -s -i db2inst1"
+          --health-interval 30s
+          --health-timeout 300s
+          --health-retries 15
         volumes:
           - database:/database
         ports:
@@ -35,18 +39,6 @@ jobs:
 
       - name: Install project
         run: pip install .
-
-      - name: Manually wait for DB2 to start
-        run: |
-          while true
-          do
-            if (docker logs db2 | grep 'Setup has completed')
-            then
-                break
-            fi
-
-            sleep 20
-          done
 
       - name: Run tests
         run: |
